--- a/_config.yml
+++ b/_config.yml
@@ -153,7 +153,7 @@ serviceWorker:
   opts:
     networkTimeoutSeconds: 5
   routes:
-    - pattern: !!js/regexp /(baidu.com|hitokoto.cn|i-meto.com|lncld.net|busuanzi|music.126.net)/
+    - pattern: !!js/regexp /(baidu.com|hitokoto.cn|i-meto.com|lncld.net|busuanzi|music.126.net|itooi.cn)/
       strategy: networkOnly
     - pattern: !!js/regexp /\/(api|asset\/lang)\/.+\.(json)$/
       strategy: networkFirst
