--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ contact:
     url: //github.com/jinyaoMa
     icon: '<i class="fab fa-github fa-fw"></i>'
   email:
-    url: mailto:jinyao.ma@outlook.com
+    url: mailto://jinyao.ma@outlook.com
     icon: '<i class="fas fa-envelope fa-fw"></i>'
   qq:
     url: tencent://Message/?uin=907881445
@@ -139,6 +139,7 @@ post:
     min2read: '<i class="fas fa-stopwatch fa-fw"></i>'
     viewcount: '<i class="fas fa-eye fa-fw"></i>'
     ending: '<i class="far fa-dot-circle fa-fw"></i>'
+    readmode: '<i class="fas fa-book-open fa-fw"></i>'
   qrcode:
     qq: /asset/img/qq.png
     wechat: /asset/img/wechat.png
@@ -191,7 +192,7 @@ serviceWorker:
   opts:
     networkTimeoutSeconds: 5
   routes:
-    - pattern: !!js/regexp /(hm.baidu.com|google.com|api.i-meto.com|github)/
+    - pattern: !!js/regexp /(hm\.baidu\.com|google\.com|api\.i-meto\.com|api\.github\.com|clustrmaps\.com|cdn\.jsdelivr\.net)/
       strategy: networkOnly
     - pattern: !!js/regexp /(icon-lib|font-mustom|MPlayer)/
       strategy: networkOnly
